tried fixing logo on firefox and chrome

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+*, *::after, *::before{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 @font-face{
 	font-family: 'ProximaReg';
 	src: url('../font/Proxima_Nova_Regular.otf');
